[tool.poetry]
authors = ["SpikeeLabs"]
description = "A simple toolkit to aggregate Gitflow tools and simplify their error handling"
name = "gitflow_toolbox"
version = "0.0.1"

include = ["README.md", "CHANGELOG.md"]
packages = [{include = "gitflow_toolbox"}]

[tool.poetry.scripts]
sample = "gitflow_toolbox.sample:cli"

[tool.poetry.dependencies]
python = ">=3.9.0,<4"

click = "^8.1.3"
python-gitlab = "^3.6.0"
python-dotenv = "^0.20.0"
GitPython = "^3.1.27"

[tool.poetry.dev-dependencies]
bandit = "^1.7"
black = "^22.3"
coverage = "^5.5"
flake8 = "^3.9"
pre-commit = "^2.16"
pylama = "^7.7"
pylint = "^2.12"
tblib = "^1.7"
toml = "^0.10"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
include = '\.pyi?$'
line-length = 120

[tool.coverage.run]
command_line = "-m unittest discover -v"
source = ["gitflow_toolbox"]

[tool.coverage.report]
fail_under = 100
